bug 328683: Read web app's context configuration directly from the archive. Do not copy it to the configuration directory.